Mon Mar 23 07:55:04 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_yacc_lex_cxx): Push lib sources onto
	de_ansi_files before generating ._c dependencies.  Test
	libobj8.test.

	* m4/mktime.m4: New version from Jim Meyering.

	* aclocal.in (usage): Document --print-ac-dir.
	(parse_arguments): Added --print-ac-dir.

	* ansi2knr.c, ansi2knr.1: New versions from ghostscript.
	(main): Reapplied "-" change from Harlan Stenn.

Fri Mar 20 22:42:30 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Use &am_conf_line_error,
	not warn.  Check to make sure warnings happen only for
	configure.in, not for "not aclocal.m4".

Fri Mar 20 22:35:31 1998  Alexandre Oliva <oliva@dcc.unicamp.br>

	* automake.in: understand AM_PROG_LEX as a replacement for
	AC_PROG_LEX and AC_DECL_YYTEXT
	warn if the replaced macros are used.
	* m4/Makefile.am: add lex.m4
	* m4/lex.m4 (AM_PROG_LEX): new file and macro
	* missing: added lex/flex support
	instead of touching flex and bison output files, try to copy
	them from a filename based on the last given argument

Fri Mar 20 00:26:10 1998  Tom Tromey  <tromey@cygnus.com>

	* m4/protos.m4: Require AC_PROG_CPP.

	* aclocal.in (add_file): If &search fails, and macro matches AM_,
	then print error.  Test aclocalii.test.

	De-ansi-fication fixes from Harlan Stenn:
	* ansi2knr.c (main): Accept "-" argument to mean stdin.
	* automake.in (handle_yacc_lex_cxx): Preprocess C source before
	running through ANSI2KNR.
	(get_object_extension): Generate rule for <dir>/ansi2knr.o.

	* texinfos.am: Include $(DESTDIR).
	* lisp.am: Include $(DESTDIR).
	* java.am: Include $(DESTDIR).
	* mans.am (install-man@SECTION@): Include $(DESTDIR).
	* automake.in (handle_man_pages): Include $(DESTDIR) in
	installdirs variable.
	(handle_texinfo): Likewise.
	(am_install_var): Likewise.
	* header-vars.am (DISTDIR): Define.
	* data.am, header.am, libs.am, ltlib.am, progs.am, scripts.am: