@@ -21,8 +21,10 @@ install-@DIR@HEADERS: $(@DIR@_HEADERS)
 ## Funny invocation because Makefile variable can be empty, leading to
 ## a syntax error in sh.
 	@list='$(@DIR@_HEADERS)'; for p in $$list; do \
-	  echo " $(INSTALL_DATA) $(srcdir)/$$p $(DESTDIR)$(@DIR@dir)/$$p"; \
-	  $(INSTALL_DATA) $(srcdir)/$$p $(DESTDIR)$(@DIR@dir)/$$p; \
+## A header file can be in the source directory or the build directory.
+	  if test -f "$$p"; then d= ; else d="$(srcdir)/"; fi; \
+	  echo " $(INSTALL_DATA) $$d$$p $(DESTDIR)$(@DIR@dir)/$$p"; \
+	  $(INSTALL_DATA) $$d$$p $(DESTDIR)$(@DIR@dir)/$$p; \
 	done
 
 uninstall-@DIR@HEADERS:
