@@ -1,5 +1,8 @@
 Mon Mar 23 07:55:04 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* header.am (install-@DIR@HEADERS): A header can appear in the
+	build directory as well as the source directory.
+
 	* automake.in (handle_yacc_lex_cxx): Push lib sources onto
 	de_ansi_files before generating ._c dependencies.  Test
 	libobj8.test.
